@@ -22,6 +22,10 @@ requiresAuth    = true
 requiresAuth    = true
 
 [PasswordMgr]
+requiresAuth    = false
+
+[UserPasswordMgr]
+requiresAuth    = true
 
 [PermissionMgr]
 requiresAuth    = true
